--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <div id="start">Welcome on my portfolio -PRERNA</div>
     <div id="task-icons"></div>
     <div id="social">
-      <a href="https://www.linkedin.com/in/prerna-shinde-b4855824b/" target="_blank"><img src="images\linkedin.png" alt="LinkedIn"></a>
-      <a href="https://github.com/prerna-2007" target="_blank"><img src="images\github.jpeg" alt="GitHub"></a>
-      <button id="darkModeToggle"><img src="images\mode.png" alt=""></button>
+      <a href="https://www.linkedin.com/in/prerna-shinde-b4855824b/" target="_blank"><img src="linkedin.png" alt="LinkedIn"></a>
+      <a href="https://github.com/prerna-2007" target="_blank"><img src="github.jpeg" alt="GitHub"></a>
+      <button id="darkModeToggle"><img src="mode.png" alt=""></button>
     </div>
   </div>
 
